# rust-raytracer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
crates/cli/: Cargo.toml
crates/cli/assets/: 02-cube-more-parameters.scad  car.scad
crates/cli/src/: main.rs  scene.rs
crates/cli/src/scene/: checkered_spheres.rs  cornell_box.rs  cornell_box_smoke.rs  earth.rs  final_scene.rs  lighted_cone_frustum.rs  lighted_frustum.rs  lighted_sphere.rs  mod.rs  perlin_spheres.rs  quads.rs  random_spheres.rs  simple_light.rs  three_spheres.rs
crates/core/: Cargo.toml
crates/core/src/: axis.rs  axis_aligned_bounding_box.rs  camera.rs  color.rs  interval.rs  lib.rs  matrix.rs  random.rs  ray.rs  vector.rs
crates/core/src/material/: dielectric.rs  diffuse_light.rs  empty.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs  refractive.rs
crates/core/src/object/: bounding_volume_hierarchy.rs  box_node.rs  cone.rs  constant_medium.rs  disc.rs  frustum.rs  group.rs  mod.rs  quad.rs  rotate.rs  rotate_y.rs  scale.rs  sphere.rs  translate.rs
crates/core/src/probability_density_function/: cosine_pdf.rs  hit_table_pdf.rs  hittable.rs  mod.rs  sphere_pdf.rs
crates/core/src/texture/: checker_texture.rs  image_texture.rs  mod.rs  noise.rs  perlin_noise.rs  perlin_turbulence.rs  solid_color.rs
crates/core/src/utils/: mod.rs  orthonormal_basis.rs  perlin.rs
crates/openscad/: Cargo.toml  README.md
crates/openscad/src/: converter.rs  docs.rs  docs_builtin.rs  interpreter.rs  language_server.rs  lib.rs  parser.rs  tokenizer.rs  value.rs
crates/openscad/src/interpreter/: expr.rs  functions.rs  mod.rs  modules.rs  tests.rs
crates/openscad/src/language_server/: hover.rs  mod.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/public/: index.html  main.js  worker.js
crates/wasm/scripts/: build.sh
crates/wasm/src/: language_server.rs  lib.rs
crates/wasm/src/types/: message.rs  mod.rs  position.rs
scripts/: flamegraph.sh  pre-commit.sh
src/: main.rs  vector.rs
src/object/: mod.rs  sphere.rs
web-app/: eslint.config.js  index.html  package-lock.json  package.json
web-app/backend/: Cargo.toml
web-app/backend/examples/Car/: main.scad  project.json
web-app/backend/examples/RandomSpheres/: project.json
web-app/backend/examples/ThreeSpheres/: project.json
web-app/backend/src/: jwt.rs  main.rs  state.rs
web-app/backend/src/repository/: project_repository.rs  user_repository.rs
web-app/backend/src/routes/: auth.rs  project_routes.rs  user.rs  user_routes.rs
web-app/backend/src/services/: examples_service.rs  mod.rs  project_service.rs
web-app/backend/src/utils/: mod.rs  s3.rs
web-app/frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json
web-app/frontend/src/: App.tsx  RenderWorkerPool.ts  monaco-openscad.ts  store.ts  types.ts
web-app/frontend/src/components/: Files.tsx  GoogleLogin.tsx  Header.tsx  Navbar.tsx  Render.tsx  RenderProgress.module.scss  RenderProgress.tsx
web-app/frontend/src/utils/: examples.ts  time.ts
web-app/frontend/src/workers/: renderWorker.ts
web-app/public/: ray_trace.scad
web-app/public/examples/random-spheres/: main.scad
web-app/public/examples/three-spheres/: main.scad
web-app/src/: App.module.scss  App.tsx  RenderWorkerPool.ts  index.scss  main.tsx  monaco-openscad.ts  state.tsx  store.ts  types.ts
web-app/src/components/: Files.module.scss  Files.tsx  Navbar.module.scss  Navbar.tsx  Render.module.scss  Render.tsx  Toolbar.tsx
web-app/src/utils/: examples.ts
web-app/src/workers/: renderWorker.ts
webapp/backend/: .env.example  Cargo.toml  README.md
webapp/backend/examples/: .gitignore
webapp/backend/examples/372e425c-d5d7-4a03-b082-0be18177f7ad/: earth.scad
webapp/backend/examples/55a3544e-cc0d-4b3e-a967-3a0cab61a3da/: lighted-sphere.scad
webapp/backend/examples/cb50f13d-c3ea-41da-9369-ca73728f0808/: random-spheres.scad
webapp/backend/migrations/: 20251230114446_initial.sql
webapp/backend/src/: main.rs  state.rs
webapp/backend/src/repository/: mod.rs  project_repository.rs  user_repository.rs
webapp/backend/src/routes/: project_routes.rs  user_routes.rs
webapp/backend/src/services/: mod.rs  project_service.rs  user_service.rs
webapp/backend/src/utils/: google.rs  mod.rs
webapp/frontend/: .gitignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  vite.config.ts
webapp/frontend/public/: caustic.scad
webapp/frontend/scripts/: generate-api.sh
webapp/frontend/src/: App.module.scss  App.tsx  main.tsx  monaco-openscad.ts  store.ts  types.ts  wasm.ts
webapp/frontend/src/components/: ErrorMessage.tsx  Files.module.scss  Files.tsx  Header.module.scss  Header.tsx  ImageViewer.tsx  LoginDialog.module.scss  LoginDialog.tsx  Navbar.module.scss  Navbar.tsx  OpenProjectDialog.module.scss  OpenProjectDialog.tsx  Render.tsx  RenderProgress.tsx
webapp/frontend/src/stores/: ProjectStore.ts  ProjectsStore.ts
webapp/frontend/src/utils/: canvas.ts
webapp/frontend/src/workers/: languageServerWorker.ts
