[package]
name = "rust-raytracer-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
typetag = "0.2.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.2"
image = "0.25.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Event",
] }

[dev-dependencies]
assert-eq-float = "0.1.4"
serde_json = "1.0.145"
