[package]
name = "caustic-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
caustic-core = { path = "../core" }
caustic-openscad = { path = "../openscad" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.6"
