[package]
name = "caustic-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
caustic-core = { path = "../core" }
caustic-openscad = { path = "../openscad" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.6"
js-sys = "0.3.83"
console_error_panic_hook = "0.1.7"
tower-lsp = "0.20.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["sync", "macros"] }
wasm-bindgen-futures = "0.4.58"
futures = "0.3.31"
async-stream = "0.3.6"
tower = "0.5.3"
web-sys = { version = "0.3.85", features = ["console"] }
