[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-s3 = "1.119.0"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
envy = "0.4.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
log = "0.4.29"
mime_guess = "2.0.5"
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }
